--- a/src/locale/backend.pot
+++ b/src/locale/backend.pot
@@ -892,7 +892,7 @@ msgid ":ref:`Monaca Backend Management APIs for Push Notifications <push_notific
 msgstr ""
 
 #: ../doc/backend/samples/index.rst:3
-msgid "Samples & Tips"
+msgid "Samples"
 msgstr ""
 
 #: ../doc/backend/tutorial/index.rst:3
