--- a/src/locale/faq.pot
+++ b/src/locale/faq.pot
@@ -1025,7 +1025,7 @@ msgid "We are only offering Monaca Enterprise to the company subscriptions."
 msgstr ""
 
 #: ../doc/faq/index.rst:3
-msgid "FAQs"
+msgid "FAQ"
 msgstr ""
 
 #: ../doc/faq/index.rst:5
