--- a/src/locale/ja/LC_MESSAGES/reference.po
+++ b/src/locale/ja/LC_MESSAGES/reference.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-09-27 03:11+0000\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
+"PO-Revision-Date: 2016-09-30 01:46+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20010,7 +20010,7 @@ msgid ""
 "``resolveLocalFileSystemURL`` and calling ``fs.root`` in the success "
 "callback. Use the ``getFile`` method of DirectoryEntry to create the target "
 "file."
-msgstr "ファイル操作プラグイン ( File プラグイン ) とファイル転送プラグインを併用して、target の作成/取得とファイルのダウンロードを行います ( ダウンロード時の target とは、「 端末上のファイルの位置を指し示す、ファイルシステムの URL 」 であり、また、この例では FileEntry オブジェクトとなります )。ファイルをダウンロードする前に、``resolveLocalFileSystemURL`` を使用して、DirectoryEntry オブジェクトを作成/取得します。成功時のコールバックでは、DirectoryEntry の ``fs.root.getFile`` メソッドを使用して、ダウンロード先となるファイル ( FileEntry ) を作成/取得します。"
+msgstr "ファイル操作プラグイン ( File プラグイン ) とファイル転送プラグインを併用して、target の作成/取得とファイルのダウンロードを行います ( ダウンロード時の target とは、「 端末上のファイルの位置を指し示す、ファイルシステムの URL 」 であり、この例では、FileEntry オブジェクトを指します )。ファイルをダウンロードする前に、``resolveLocalFileSystemURL`` を使用して、DirectoryEntry オブジェクトを作成/取得します。成功時のコールバックでは、DirectoryEntry の ``fs.root.getFile`` メソッドを使用して、ダウンロード先となるファイル ( FileEntry ) を作成/取得します。"
 
 #: ../doc/reference/cordova_6.2/file-transfer/index.rst:412
 msgid ""
@@ -20042,7 +20042,7 @@ msgid ""
 "``readAsArrayBuffer`` and pass the FileEntry object to the method. Once you "
 "read the file successfully, construct a Blob object using the result of the "
 "read."
-msgstr "バイナリーファイルの読み込み後に、なんらかの処理をする場合、FileReader の ``readAsBinaryString`` と ``readAsArrayBuffer`` の 2 つのメソッドを使用できます。ここでは、``readAsArrayBuffer`` を使用し、FileEntry オブジェクトをこのメソッドに渡します。ファイルの読み込み後は、その処理結果を使用して、Blog オブジェクトを作成します。"
+msgstr "バイナリーファイルの読み込み後に、なんらかの処理をする場合、FileReader の ``readAsBinaryString`` と ``readAsArrayBuffer`` の 2 つのメソッドを使用できます。ここでは、``readAsArrayBuffer`` を使用し、FileEntry オブジェクトをこのメソッドに渡します。ファイルの読み込み後は、その処理結果を使用して、Blob オブジェクトを作成します。"
 
 #: ../doc/reference/cordova_6.2/file-transfer/index.rst:483
 msgid ""
@@ -24939,7 +24939,7 @@ msgid ""
 "able to use cloud services and remote build functions as if you are using "
 ":ref:`Monaca Cloud IDE <monaca_ide_index>` or :ref:`Monaca CLI "
 "<monaca_cli_index>`."
-msgstr "「 Monaca クラウド & リモートビルド API 」 を組み込めば、Cordova アプリのビルド処理を始め、Monaca クラウドが提供する各種 Web サービスを使用することができます。:ref:`Monaca クラウド IDE <monaca_ide_index>` と :ref:`Monaca CLI <monaca_cli_index>` でも提供しているサービス・機能が、この API 経由で使用できるようになります。"
+msgstr "「 Monaca クラウド & リモートビルド API 」 を組み込めば、Cordova アプリのビルド処理を始め、Monaca クラウドが提供する各種 Web サービスを使用することができます ( :ref:`Monaca クラウド IDE <monaca_ide_index>` と :ref:`Monaca CLI <monaca_cli_index>` で提供しているサービス・機能が、この API 経由で使用できるようになります )。"
 
 #: ../doc/reference/monaca_api/monaca_api_guide.rst:9
 msgid ""
@@ -24970,7 +24970,7 @@ msgstr "js ファイル内で、次のようにモジュールを呼び出しま
 msgid ""
 "You can now use any Monaca Cloud & Remote Build API in your js file now. For"
 " example:"
-msgstr "呼び出し後、次のようにして、「 Monaca クラウド & リモートビルド API 」 を使用できます ( ｊｓ ファイル内 )。"
+msgstr "呼び出し後は、次のように、「 Monaca クラウド & リモートビルド API 」 を使用できます ( js ファイル内 )。"
 
 #: ../doc/reference/monaca_api/monaca_api_guide.rst:44
 msgid "Monaca Cloud & Remote Build API Usage"
@@ -24999,7 +24999,7 @@ msgstr "Monaca クラウド側のプロジェクトとの同期"
 
 #: ../doc/reference/monaca_api/monaca_api_guide.rst:52
 msgid "Transpile local project."
-msgstr "ローカルプロジェクトの変換処理 ( トランスパイル/Transpile )"
+msgstr "プロジェクトのコード変換 ( トランスパイル/Transpile )"
 
 #: ../doc/reference/monaca_api/monaca_api_guide.rst:55
 msgid ""
@@ -25245,7 +25245,7 @@ msgid ""
 "This plugin updates HTML5 assets contained in the app without rebuilding and"
 " packaging the app. You need a Web server to host the updated files which "
 "will be accessed from the app."
-msgstr "アプリで使用している HTML5 アセットを、再ビルド・再パッケージ化を行わずに更新するためのプラグイン ( Monaca In-App Updater ) です。なお、更新ファイルをホストする Web サーバーが、別途、必要になります。"
+msgstr "アプリで使用している HTML5 アセットを、再ビルド・再パッケージ化を行わずに、更新するためのプラグイン ( Monaca In-App Updater ) です。なお、更新ファイルをホストする Web サーバーが、別途、必要になります。"
 
 #: ../doc/reference/power_plugins/in-app_updater.rst:21
 #: ../doc/reference/power_plugins/sqlcipher.rst:31
@@ -25350,7 +25350,7 @@ msgstr "更新用ファイルの作成"
 msgid ""
 "In order to use this plugin, you will need a :file:`update.json` file in "
 "addition to Android and/or iOS update files."
-msgstr "このプラグインを使用する場合、更新用ファイル ( 各 プラットフォーム向け ) に加え、 :file:`update.json` ファイルが必要です。"
+msgstr "このプラグインを使用する場合、更新用ファイル ( 各プラットフォーム向け ) に加え、 :file:`update.json` ファイルが必要です。"
 
 #: ../doc/reference/power_plugins/in-app_updater.rst:94
 msgid "File Name"
@@ -26005,7 +26005,7 @@ msgid ""
 "<import_cordova_plugin>` it. In order to import this plugin, you need to "
 "subscribe to a valid plan. Please refer to `Pricing "
 "<https://monaca.io/pricing.html>`_."
-msgstr "どのプランをご利用の場合でも、こちらの Repro サービスをご利用いただけます。最新の Repro プラグインを使用する場合 ( `Github <https://github.com/reproio/repro-ios-sdk>`_ 経由で入手 ) には、こちらの :ref:`インポート <import_cordova_plugin>` 機能をご利用ください。なお、プラグインのインポートには、対応するプランへの加入が必要です。プランの詳細は、 `こちら <https://ja.monaca.io/pricing.html>>`_ をご確認ください。"
+msgstr "どのプランをご利用の場合でも、こちらの Repro サービスをご利用いただけます。最新の Repro プラグインを使用する場合 ( `Github <https://github.com/reproio/repro-ios-sdk>`_ 経由で入手 ) には、こちらの :ref:`インポート <import_cordova_plugin>` 機能をご利用ください。なお、プラグインのインポートには、対応するプランへの加入が必要です。プランの詳細は、`こちら <https://ja.monaca.io/pricing.html>`_ をご確認ください。"
 
 #: ../doc/reference/service_integration/repro.rst:16
 msgid "Add Repro Service to Monaca"
@@ -26046,7 +26046,7 @@ msgstr "Repro の管理画面へ移動して、 :guilabel:`設定 --> SDK セッ
 msgid ""
 "After you get the app's token, replace it in the following snippet of "
 "``onDeviceReady`` function. Then, add this snippet to your project."
-msgstr "アプリのトークンの確認後、下記の ``onDeviceReady`` 関数の 「 YOUR_APP_TOKEN 」 の箇所に、トークンを挿入します。挿入後、次のコードをプロジェクトに追加します。"
+msgstr "アプリのトークンの確認後、次の ``onDeviceReady`` 関数の 「 YOUR_APP_TOKEN 」 の箇所に、トークンを挿入します。挿入後、次のコードをプロジェクトに追加します。"
 
 #: ../doc/reference/service_integration/repro.rst:72
 msgid ""
@@ -26114,7 +26114,7 @@ msgid ""
 "Info.plist`` file respectively. However, for Cordova 6.2 or higher, both "
 ":file:`AndroidManifest.xml` and ``MonacaApp-Info.plist`` files are removed "
 "from Monaca framework."
-msgstr "Cordova 5.2 以前のバージョンをサポートする Monaca フレームワークでは、:file:`AndroidManifest.xml` ( Android の場合 ) または ``MonacaApp-Info.plist`` ( iOS の場合 ) を編集すれば、アプリのデフォルトの挙動を制御することができました。Cordova 6.2 以降のバージョンをサポートする Monaca フレームワークでは、仕様が変更され、:file:`AndroidManifest.xml` と ``MonacaApp-Info.plist`` のいずれのファイルも使用しなくなりました。"
+msgstr "Cordova 5.2 以前のバージョンをサポートしていた Monaca フレームワークでは、:file:`AndroidManifest.xml` ( Android の場合 ) または ``MonacaApp-Info.plist`` ( iOS の場合 ) を編集すれば、アプリのデフォルトの挙動を制御することができました。Cordova 6.2 以降のバージョンをサポートする Monaca フレームワークでは、仕様が変更され、:file:`AndroidManifest.xml` と ``MonacaApp-Info.plist`` のいずれのファイルも使用しなくなりました。"
 
 #: ../doc/reference/third_party_phonegap/custom_config.rst:9
 msgid ""
