--- a/src/locale/monaca_cli.pot
+++ b/src/locale/monaca_cli.pot
@@ -1362,7 +1362,7 @@ msgid ":ref:`localkit_publishing_app`"
 msgstr ""
 
 #: ../doc/monaca_cli/tutorial/testing_debugging.rst:5
-msgid "Part 2: Using Monaca Debugger"
+msgid "Part 2: Running Monaca Debugger with Monaca CLI"
 msgstr ""
 
 #: ../doc/monaca_cli/tutorial/testing_debugging.rst:10
