--- a/src/locale/monaca_ide.pot
+++ b/src/locale/monaca_ide.pot
@@ -2511,7 +2511,7 @@ msgid "For more information regarding the code editor in Monaca Cloud IDE, pleas
 msgstr ""
 
 #: ../doc/monaca_ide/tutorial/testing_debugging.rst:5
-msgid "Part 2: Running a Project on Monaca Debugger"
+msgid "Part 2: Running Monaca Debugger with Monaca Cloud IDE"
 msgstr ""
 
 #: ../doc/monaca_ide/tutorial/testing_debugging.rst:8
