--- a/src/locale/monaca_localkit.pot
+++ b/src/locale/monaca_localkit.pot
@@ -948,7 +948,7 @@ msgid "Use Preview function to see the change. If your Preview is already opened
 msgstr ""
 
 #: ../doc/monaca_localkit/tutorial/testing_debugging.rst:5
-msgid "Part 2: Using Monaca Debugger"
+msgid "Part 2: Running Monaca Debugger with Monaca Localkit"
 msgstr ""
 
 #: ../doc/monaca_localkit/tutorial/testing_debugging.rst:10
