--- a/src/locale/monaca_vs.pot
+++ b/src/locale/monaca_vs.pot
@@ -874,7 +874,7 @@ msgid "Save the changes. You will be able to see the changes reflected immediate
 msgstr ""
 
 #: ../doc/monaca_vs/tutorial/testing_debugging.rst:5
-msgid "Part 2: Using Monaca Debugger"
+msgid "Part 2: Running Monaca Debugger with Monaca for Visual Studio"
 msgstr ""
 
 #: ../doc/monaca_vs/tutorial/testing_debugging.rst:11
