--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-10-03 06:22+0000\n"
+"PO-Revision-Date: 2016-10-03 09:55+0000\n"
 "Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -92,7 +92,7 @@ msgstr ""
 
 #: ../doc/onsenui/tutorial/index.rst:3
 msgid "Onsen UI Tutorial"
-msgstr ""
+msgstr "Onsen UI チュートリアル"
 
 #: ../doc/onsenui/tutorial/index.rst:5
 msgid ""
