--- a/src/locale/ja/LC_MESSAGES/tutorials.po
+++ b/src/locale/ja/LC_MESSAGES/tutorials.po
@@ -9,6 +9,7 @@ msgstr ""
 "Project-Id-Version: Monaca 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: fabbygoh <fabbygoh@gmail.com>, 2016\n"
 "Language-Team: Japanese (https://www.transifex.com/monaca/teams/61343/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,4 +19,4 @@ msgstr ""
 
 #: ../doc/tutorials/index.rst:3
 msgid "Tutorials"
-msgstr ""
+msgstr "チュートリアル"
