--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -4,11 +4,12 @@
 # 
 # Translators:
 # Automatically generated, 2013
+# fabbygoh <fabbygoh@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-09-27 11:38+0000\n"
+"PO-Revision-Date: 2016-10-06 01:25+0000\n"
 "Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
