[update] Updated Android Push Notification page.

--- a/src/locale/ja/LC_MESSAGES/backend.po
+++ b/src/locale/ja/LC_MESSAGES/backend.po
@@ -742,7 +742,7 @@ msgstr "ステップ 1 : CSR ファイルの作成 ( Monaca クラウド IDE 上
 
 #: ../doc/backend/manual/push_notification/apns.rst:30
 #: ../doc/backend/manual/push_notification/apns.rst:105
-#: ../doc/backend/manual/push_notification/gcm.rst:123
+#: ../doc/backend/manual/push_notification/gcm.rst:62
 msgid ""
 "From the Backend Panel in Monaca Cloud IDE, go to :menuselection:`Push "
 "Notification --> Backend Settings --> Push Configuration`."
@@ -873,12 +873,13 @@ msgstr "Android アプリへのプッシュ通知設定"
 
 #: ../doc/backend/manual/push_notification/gcm.rst:12
 msgid ""
-"Monaca sends push notifications via GCM (Google Cloud Messaging). GCM is a "
-"mechanism offered by Google to send push notifications to Android "
-"applications."
+"Monaca sends push notifications via FCM (Firebase Cloud Messaging). FCM is a"
+" cross-platform messaging solution that lets you reliably deliver messages "
+"at no cost. Using FCM, you can notify a client app that new email or other "
+"data is available to sync. You can send notification messages to drive user "
+"reengagement and retention. For use cases such as instant messaging, a "
+"message can transfer a payload of up to 4KB to a client app."
 msgstr ""
-"Monaca では、GCM ( Google Cloud Messaging ) を使用して、プッシュ通知を行います。GCM は、Android "
-"アプリへプッシュ通知を送るためのメカニズムです ( Google 社が提供 )。"
 
 #: ../doc/backend/manual/push_notification/gcm.rst:14
 msgid ""
@@ -886,120 +887,60 @@ msgid ""
 "notifications service for Android applications with Monaca."
 msgstr "ここでは、Android アプリ向けにプッシュ通知を行うための手順を解説します。"
 
-#: ../doc/backend/manual/push_notification/gcm.rst:17
+#: ../doc/backend/manual/push_notification/gcm.rst:16
 msgid "You are required to have a Google account for this configuration."
 msgstr "ここでは、Google アカウントを使用します。"
 
-#: ../doc/backend/manual/push_notification/gcm.rst:21
-msgid "Step 1: Enable GCM in the Google API Console"
-msgstr "ステップ 1 : GCM の有効化 ( Google API Console 上  )"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:23
-msgid ""
-"In this example, we assume that you haven't registered your application to "
-"Google Developer Console yet."
-msgstr "ここでは、Google Developer Console 上にアプリを登録していないことを前提で解説をします。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:25
-msgid ""
-"Go to `Google API Console <https://console.developers.google.com/>`_. and "
-"sign in with a valid Google account."
+#: ../doc/backend/manual/push_notification/gcm.rst:20
+msgid "Step 1: Get API Key from Firebase Console"
 msgstr ""
-"`Google API Console <https://console.developers.google.com/>`_ へ行き、Google "
-"アカウントを使用して、サインインします。"
 
-#: ../doc/backend/manual/push_notification/gcm.rst:27
-msgid "Click on :guilabel:`Create a project`."
-msgstr ":guilabel:`プロジェクトを作成` をクリックします。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:35
-msgid "Input the project's name and click :guilabel:`Create`."
-msgstr "プロジェクト名を入力して、:guilabel:`作成` ボタンをクリックします。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:43
+#: ../doc/backend/manual/push_notification/gcm.rst:22
 msgid ""
-"Go to Library panel and type ``Google Cloud Messaging`` in the search box. "
-"Then, select on ``Google Cloud Messaging`` in the search result as shown in "
-"the screenshot below."
+"In order to integrate Monaca with FCM, API key is required. Please follow "
+"the instruction below to get an API key from the Firebase Console:"
 msgstr ""
-"[ ライブラリ ] パネルを選択して、表示されたページ上の検索ボックスに、``Google Cloud Messaging`` "
-"と入力します。次のスクリーンショットのように、検索結果の一覧から、``Google Cloud Messaging`` を選択します。"
 
-#: ../doc/backend/manual/push_notification/gcm.rst:51
-msgid "Click :guilabel:`Enable`."
-msgstr ":guilabel:`有効にする` ボタンをクリックします。"
+#: ../doc/backend/manual/push_notification/gcm.rst:24
+msgid ""
+"Go to `Firebase Console <https://console.firebase.google.com/>`_. and sign "
+"in with a valid Google account."
+msgstr ""
+
+#: ../doc/backend/manual/push_notification/gcm.rst:26
+msgid "Click on :guilabel:`CREATE NEW PROJECT`."
+msgstr ""
+
+#: ../doc/backend/manual/push_notification/gcm.rst:34
+msgid ""
+"Input a project's name and choose your country/region. Then, click "
+":guilabel:`CREATE PROJECT`."
+msgstr ""
+
+#: ../doc/backend/manual/push_notification/gcm.rst:42
+msgid ""
+"Once your project is created, go to :guilabel:`Project settings` from the "
+"left menu."
+msgstr ""
+
+#: ../doc/backend/manual/push_notification/gcm.rst:50
+msgid ""
+"In the Settings page, go to :guilabel:`CLOUD MESSAGING`. Then, you will be "
+"able to see the ``Server Key`` and ``Sender ID`` which will be used in "
+"Monaca later. The ``Server Key`` is used as an API key for the push "
+"notification and the ``Sender ID`` represents a sender."
+msgstr ""
 
 #: ../doc/backend/manual/push_notification/gcm.rst:60
-msgid "Step 2: Obtain the Sender ID and Server API Key"
+msgid "Step 2: Configure FCM Parameters in Monaca"
 msgstr ""
-"ステップ 2 : Sender ID ( Monaca クラウド IDE ) と サーバー API キー ( Google API Console 上 "
-")"
 
-#: ../doc/backend/manual/push_notification/gcm.rst:64
-msgid "Find Sender ID"
-msgstr "Sender ID の確認"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:66
-msgid ""
-"Sender ID is the Project Number which can be found in Settings page as shown"
-" below:"
-msgstr ""
-"プッシュ通知の Sender ID ( Monaca クラウド IDE ) には、Google APIs Console "
-"のプロジェクト番号を使用します。プロジェクト番号の確認方法は、次のとおりです。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:69
-msgid "Click on Google APIs menu."
-msgstr "[ Google APIs ] 横の切り替えメニューをクリックします。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:77
-msgid "Go to :guilabel:`IAM & Admin`."
-msgstr ":guilabel:`IAM と 管理` を選択します。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:85
-msgid ""
-"Then, go to :guilabel:`Settings`. There you can find the project number."
-msgstr "次に、:guilabel:`設定` を選択します。表示された画面上で、プロジェクト番号を確認します。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:95
-msgid "Find Server API Key"
-msgstr "サーバー API キーの確認"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:97
-msgid "From the API Manager page, go to :guilabel:`Credentials`."
-msgstr ""
-"[ Google APIs ] 横の切り替えメニューから [ API Manager ] を選択して、次に、:guilabel:`認証情報` "
-"を選択します ( Google APIs Console 上 )。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:99
-msgid "Click :guilabel:`Create credentials` and choose :guilabel:`API key`."
-msgstr ":guilabel:`認証情報を作成` をクリックして、:guilabel:`API キー` を選択します。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:107
-msgid "Select :guilabel:`Server key`."
-msgstr ":guilabel:`サーバーキー` を選択します。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:109
-msgid "Name your Server key and click :guilabel:`Create`."
-msgstr "サーバーキーの名前を入力して、:guilabel:`作成` ボタンをクリックします。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:118
-msgid ""
-"Then, Server API key will be created and displayed as shown below. Copy it. "
-"You will need to use this key in Monaca Cloud IDE later."
-msgstr "API キーが作成・表示されます。後ほど、Monaca クラウド IDE 上で使用するので、キーをコピーして、手元に保存します。"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:121
-msgid "Step 3: Configure GCM Parameters in Monaca"
-msgstr "ステップ 3 : GCM パラメーターの設定 ( Monaca 上 )"
-
-#: ../doc/backend/manual/push_notification/gcm.rst:131
+#: ../doc/backend/manual/push_notification/gcm.rst:70
 msgid ""
 "Under Android section, input the Sender ID and Server API Key and click "
-":guilabel:`Save`. Then, the setup processes for Android app notifications "
-"are completed."
+":guilabel:`Save`. Now, the Android push notification is enabled and ready to"
+" use."
 msgstr ""
-"[ Android ] 項目上で、Sender ID と Server API Key ( 先ほどのサーバー API キー ) "
-"を入力して、:guilabel:`保存する` ボタンをクリックします。これで、Android アプリ向けの通知設定が完了しました。"
 
 #: ../doc/backend/manual/push_notification/index.rst:5
 msgid "Push Notification"
