[po file] added translation for Android Push Notification page.

--- a/src/locale/ja/LC_MESSAGES/manual.po
+++ b/src/locale/ja/LC_MESSAGES/manual.po
@@ -837,7 +837,7 @@ msgstr ""
 "Monaca では、FCM ( Firebase Cloud Messaging ) 経由でプッシュ通知を行っています。"
 "FCM とは、Google 社が提供する Firebase ( MBaas の一種 ) を基盤とした、クロスプラットフォーム向けの"
 "メッセージング サービスです。このサービスを使用すれば、費用をかけずに、通知タイプ "
-( プッシュ通知、案内メールなど ) およびデータ転送タイプ ( ペイロードサイズの上限は 4 KB ) のメッセージを、"
+"( プッシュ通知、案内メールなど ) およびデータ転送タイプ ( ペイロードサイズの上限は 4 KB ) のメッセージを、"
 "クライアント側アプリに対して配信できます ( 通知とデータを併せて使用することもできます )。"
 
 #: ../doc/manual/backend/push_notification/gcm.rst:14
