[update] fixed broken links.

--- a/src/locale/debugger.pot
+++ b/src/locale/debugger.pot
@@ -856,7 +856,7 @@ msgid "Chrome Apps are web apps running by Chrome Engine. The installed Chrome A
 msgstr ""
 
 #: ../doc/debugger/manual/installation/debugger_chrome.rst:16
-msgid "You can install Monaca debugger for Chrome Apps via `Chrome Web Store <https://chrome.google.com/webstore/detail/eampeimhpjmnimjbfajnbegjnafjadld>`_. Or from Monaca Cloud IDE menu, go to :menuselection:`Debug --> Setup Monaca Debugger --> Debugger for Chrome Apps`."
+msgid "You can install `Monaca debugger for Chrome Apps via Chrome Web Store <https://chrome.google.com/webstore/detail/eampeimhpjmnimjbfajnbegjnafjadld>`_. Or from Monaca Cloud IDE menu, go to :menuselection:`Debug --> Setup Monaca Debugger --> Debugger for Chrome Apps`."
 msgstr ""
 
 #: ../doc/debugger/manual/installation/debugger_chrome.rst:24
