--- a/src/locale/ja/LC_MESSAGES/debugger.po
+++ b/src/locale/ja/LC_MESSAGES/debugger.po
@@ -1170,15 +1170,11 @@ msgstr ""
 
 #: ../doc/debugger/manual/installation/debugger_chrome.rst:16
 msgid ""
-"You can install Monaca debugger for Chrome Apps via `Chrome Web Store "
+"You can install `Monaca debugger for Chrome Apps via Chrome Web Store "
 "<https://chrome.google.com/webstore/detail/eampeimhpjmnimjbfajnbegjnafjadld>`_."
 " Or from Monaca Cloud IDE menu, go to :menuselection:`Debug --> Setup Monaca"
 " Debugger --> Debugger for Chrome Apps`."
 msgstr ""
-"Chrome 向けの Monaca デバッガーは、`Chrome ウェブストア "
-"<https://chrome.google.com/webstore/detail/eampeimhpjmnimjbfajnbegjnafjadld>`_"
-" から入手できます。または、Monaca クラウド IDE のメニューから、:menuselection:`デバッグ --> "
-"デバッガーの説明とインストール --> Chrome 向けデバッガー インストール` を選択します。"
 
 #: ../doc/debugger/manual/installation/debugger_chrome.rst:24
 msgid ""
