--- a/src/locale/ja/LC_MESSAGES/sampleapp.po
+++ b/src/locale/ja/LC_MESSAGES/sampleapp.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-09-29 23:47+0000\n"
-"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
+"PO-Revision-Date: 2016-10-07 09:27+0000\n"
+"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -519,8 +519,8 @@ msgstr ":guilabel:`JavaScript からのアイテム追加を許可する` にチ
 #: ../doc/sampleapp/samples/backend_memo.rst:37
 msgid ""
 "For more details on how to create Backend, please read "
-":doc:`../../manual/backend/control_panel`"
-msgstr "バックエンドの作成方法の詳細は、 :doc:`../../manual/backend/control_panel` をご確認ください。"
+":ref::`backend_control_panel`."
+msgstr ""
 
 #: ../doc/sampleapp/samples/backend_memo.rst:40
 msgid ""
