--- a/src/locale/sampleapp.pot
+++ b/src/locale/sampleapp.pot
@@ -438,7 +438,7 @@ msgid "Please check :guilabel:`Allow JavaScript API to insert data`. :guilabel:`
 msgstr ""
 
 #: ../doc/sampleapp/samples/backend_memo.rst:37
-msgid "For more details on how to create Backend, please read :doc:`../../manual/backend/control_panel`"
+msgid "For more details on how to create Backend, please read :ref::`backend_control_panel`."
 msgstr ""
 
 #: ../doc/sampleapp/samples/backend_memo.rst:40
