[po file] Reflected translation.

--- a/src/locale/ja/LC_MESSAGES/monaca_cli.po
+++ b/src/locale/ja/LC_MESSAGES/monaca_cli.po
@@ -1801,7 +1801,7 @@ msgstr ":ref:`localkit_publishing_app`"
 
 #: ../doc/monaca_cli/tutorial/testing_debugging.rst:5
 msgid "Part 2: Running Monaca Debugger with Monaca CLI"
-msgstr "パート 2 : Monaca クラウド CLI と Monaca デバッガーとの連携"
+msgstr "パート 2 : Monaca CLI と Monaca デバッガーとの連携"
 
 #: ../doc/monaca_cli/tutorial/testing_debugging.rst:10
 msgid ""
