--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-10-13 08:09+0000\n"
-"Last-Translator: Masahiro Tanaka <masahiro@asial.co.jp>\n"
+"PO-Revision-Date: 2016-10-13 09:36+0000\n"
+"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +24,7 @@ msgstr "Onsen UI"
 
 #: ../doc/onsenui/manual/index.rst:2
 msgid "Manual"
-msgstr ""
+msgstr "マニュアル"
 
 #: ../doc/onsenui/manual/index.rst:12
 msgid "HTML5 Framework for Building Mobile App Front End"
@@ -82,7 +82,7 @@ msgstr "ここまでの手順で、Onsen UI のインストールが完了しま
 
 #: ../doc/onsenui/samples/index.rst:3
 msgid "Samples"
-msgstr ""
+msgstr "サンプルアプリ"
 
 #: ../doc/onsenui/samples/index.rst:5
 msgid ""
@@ -92,7 +92,7 @@ msgstr ""
 
 #: ../doc/onsenui/tutorial/index.rst:3
 msgid "Onsen UI Tutorial"
-msgstr ""
+msgstr "Onsen UI チュートリアル"
 
 #: ../doc/onsenui/tutorial/index.rst:5
 msgid ""
