--- a/src/locale/ja/LC_MESSAGES/sampleapp.po
+++ b/src/locale/ja/LC_MESSAGES/sampleapp.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-10-13 08:17+0000\n"
-"Last-Translator: Masahiro Tanaka <masahiro@asial.co.jp>\n"
+"PO-Revision-Date: 2016-10-13 09:41+0000\n"
+"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -520,7 +520,7 @@ msgstr ":guilabel:`JavaScript からのアイテム追加を許可する` にチ
 msgid ""
 "For more details on how to create Backend, please read "
 ":ref::`backend_control_panel`."
-msgstr ""
+msgstr "バックエンドの作成方法の詳細は、 :ref::`backend_control_panel` をご確認ください。"
 
 #: ../doc/sampleapp/samples/backend_memo.rst:40
 msgid ""
