[update] Added direct translation to Debugger Tutorial page.

--- a/src/locale/ja/LC_MESSAGES/power_plugins.po
+++ b/src/locale/ja/LC_MESSAGES/power_plugins.po
@@ -526,6 +526,8 @@ msgid ""
 "With Monaca Power Plugins, we deliver developers the ability to secure their"
 " work with the latest security technologies."
 msgstr ""
+"Monaca "
+"では、セキュリティー系のプラグインを含む、便利なプラグインを複数提供しています。セキュリティー系のプラグインを使用すれば、最先端のセキュリティー技術を、簡単にアプリに実装させることができます。"
 
 #: ../doc/power_plugins/manual/index.rst:7
 msgid ""
