--- a/src/locale/ja/LC_MESSAGES/sampleapp.po
+++ b/src/locale/ja/LC_MESSAGES/sampleapp.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-10-14 06:49+0000\n"
+"PO-Revision-Date: 2016-10-25 09:14+0000\n"
 "Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -520,7 +520,7 @@ msgstr ":guilabel:`JavaScript からのアイテム追加を許可する` にチ
 msgid ""
 "For more details on how to create Backend, please read "
 ":ref::`backend_control_panel`."
-msgstr ""
+msgstr "バックエンドの作成方法の詳細は、 :ref::`backend_control_panel` をご確認ください。"
 
 #: ../doc/sampleapp/samples/backend_memo.rst:40
 msgid ""
